samples/movieapp/with-istio/movieapp/movieapp-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: movieapp
  labels:
    app: movieapp
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: movieapp
      version: v1
  template:
    metadata:
      labels:
        app: movieapp
        version: v1
    spec:
      containers:
      - name: movieapp
        image: registry-vpc.cn-hangzhou.aliyuncs.com/inceptio-prod/infra_movieapp:1.0.0
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
