samples/movieapp/with-istio/movieapp/movieapp-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: movieapp
  name: movieapp
spec:
  ports:
  - port: 8080
    name: http
  selector:
    app: movieapp
